Fixed align

--- a/blocks/src/slider/style.scss
+++ b/blocks/src/slider/style.scss
@@ -47,9 +47,8 @@
 	}
 
 	.content {
-		position: relative;
-
 		section.wp-block-xynity-blocks-slider-child {
+			height: 100%;
 			position: absolute;
 			z-index: -1;
 			inset: 0;
@@ -60,6 +59,7 @@
 
 			// Center the image
 			figure.wp-block-image {
+				height: 100%;
 				display: flex;
 				flex-direction: row !important;
 				align-items: center;
